[skip ci] put auth config type in api spec
